[package]
name = "prime-factorization"
version = "0.1.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench"
harness = false

[dependencies]
rand = "0.7"
uint = "0.8"
num-bigint = { version = "0.3", features = ["rand"] }

[dev-dependencies]
criterion = "0.3"
